--- a/Tp-Final-labo4/src/app/Components/carrusel/carrusel.css
+++ b/Tp-Final-labo4/src/app/Components/carrusel/carrusel.css
@@ -36,4 +36,56 @@
 .ranking {
   position: absolute;
   top: 10px;
+  left: 10px;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 5px 10px;
+  border-radius: 8px;
+  font-size: 1rem;
+  font-weight: bold;
+  z-index: 1;
 }
+
+.carousel-arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  background-color: rgba(255, 255, 255, 0.8); 
+  border: yes;
+  color: #333; 
+  padding: 30px;
+  cursor: pointer;
+  z-index: 2;
+  border-radius: 50%;
+  width: 40px; 
+  height: 40px; 
+  display: flex; 
+  justify-content: center; 
+  align-items: center; 
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+  transition: background-color 0.3s ease, transform 0.1s ease; 
+}
+
+.left-arrow {
+  left: 10px; 
+}
+
+.right-arrow {
+  right: 10px; 
+}
+
+.carousel-arrow:hover {
+  background-color: rgba(255, 255, 255, 1); 
+  transform: translateY(-50%) scale(2); 
+}
+
+.carousel-arrow:focus {
+  outline: none; 
+}
+.carousel-arrow:disabled {
+  color: #ccc; 
+  cursor: not-allowed;
+}
+
+
+
