--- a/Tp-Final-labo4/src/app/Components/top-bar/top-bar.html
+++ b/Tp-Final-labo4/src/app/Components/top-bar/top-bar.html
@@ -1,1 +1,27 @@
-<p>top-bar works!</p>
+<div class="container">
+  <div class="row align-items-center py-3">
+    <div class="col-md-3 text-center">
+      <p class="mt-2 text-center"></p>
+      <a [routerLink]="['/']" class="movie-title-link"> 
+        <img src="assets/logo-cine.png" alt="logo-cine" class="img-fluid logo">
+      </a>
+    </div>
+   
+    <div class="col-md-6">
+      
+      <div class="input-group">
+        <input  type="text"  class="form-control" id="search" [formControl]="busqueda" placeholder="Buscar pelicula">
+        <button class="btn btn-primary" (click)="buscar()">Buscar </button>
+        
+      </div>
+      
+    </div>
+
+    <div class="col-md-2 text-end">
+      <a [routerLink]="['/profile-detail']">
+        <img src="assets/perfil.png" alt="Perfil del usuario" class="rounded-circle" style="width: 50px; height: 50px;">
+      </a>
+      <button  routerLinkActive="router-link-active">Perfiles</button>
+    </div>
+  </div>
+</div>
