--- a/Tp-Final-labo4/src/app/Components/movie-search/movie-search.html
+++ b/Tp-Final-labo4/src/app/Components/movie-search/movie-search.html
@@ -1,1 +1,53 @@
-<p>movie-search works!</p>
+<div class="container">
+  <div class="container-nav">
+
+    <div>
+      <a [routerLink]="['/']" class="movie-title-link">
+        <img src="assets/logo-cine.png" alt="logo-cine" class="logo">
+      </a>
+    </div>
+
+
+    <div>
+      <input [formControl]="busqueda" type="text" class="form-control" id="search" placeholder="Buscar pelicula">
+      <button class="btn btn-primary" (click)="buscar()" [disabled]="busqueda.invalid" >Buscar </button>
+      @if (busqueda.hasError("required") && busqueda.touched) {
+      <span>No se ingreso dato de la pelicula</span>
+    }
+    </div>
+
+
+    <div>
+      <a [routerLink]="['/profile-detail']" class="perfil-class" >
+        <h2>Perfil</h2>
+        <img src="assets/perfil.png" alt="Perfil del usuario" class="logo perfil">
+      </a>
+    </div>
+
+  </div>
+
+  <div class="row mt-3">
+
+
+    @for (item of resultados; track item.id) {
+    <div class="col-2">
+
+      <div class="card">
+        <a [routerLink]="['/movie-review', item.id]">
+          <img [src]="'https://image.tmdb.org/t/p/w500' + item.poster_path" alt="{{ item.title }}"
+            class="img-fluid rounded">
+        </a>
+        <a [routerLink]="['/movie-review', item.id]" class="movie-title-link">
+          <p class="mt-2 text-center">{{ item.title }}</p>
+        </a>
+        <p class="text-muted text-center">Puntuación: {{ item.vote_average }}</p>
+      </div>
+
+
+    </div>
+    }
+
+
+  </div>
+</div>
+<app-footer></app-footer>
