--- a/Tp-Final-labo4/src/app/Components/top-bar/top-bar.css
+++ b/Tp-Final-labo4/src/app/Components/top-bar/top-bar.css
@@ -1,40 +1,29 @@
-.header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 10px;
-    background-color: #282c34;
-    color: white;
-  }
-  
+
   .logo {
     font-size: 1.5em;
-    font-weight: bold;
-    
+    max-width: 70px;
   }
-  .logo {
-  max-width: 120px;
-  height: auto;
-}
-  
-  .search-bar {
+  .container{
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   height: 30%;
+   width: 70%;
+  }
+  .perfil-class{
     display: flex;
+    flex-direction: column;
     align-items: center;
+    text-decoration: none;
+
   }
+
+  h2{
+    font-family: 'Arial', sans-serif;
+    color: #666666;
+    font-size: 15px;
   
-  .search-bar input {
-    padding: 5px;
-    margin-right: 10px;
   }
-  
-  .perfil img {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-  }
-  
-  .movie-carousel {
-    margin-top: 20px;
-    padding: 20px;
-  }
+
+
   
