--- a/Tp-Final-labo4/src/app/Components/profile-detail/profile-detail.html
+++ b/Tp-Final-labo4/src/app/Components/profile-detail/profile-detail.html
@@ -1,1 +1,41 @@
-<p>profile-detail works!</p>
+<app-top-bar></app-top-bar>
+
+@if(userLoggedIn){
+
+  <div class="profile-container">
+      <h2>Detalles del perfil</h2>
+      <div class="profile-info">
+        <p><strong>Usuario:</strong> {{ userProfile?.username }}</p>
+        <p><strong>Email:</strong> {{ userProfile?.email }}</p>
+        <p><strong>Fecha de nacimiento:</strong> {{ userProfile?.date }}</p>
+        <p><strong>Celular:</strong> {{ userProfile?.cel }}</p>
+      </div>
+      
+      <h3>Reseñas</h3>
+
+      @if (reviews.length === 0) {
+       <span>No tienes reseñas disponibles.</span>
+
+      }
+  
+        <div *ngFor="let review of reviews" class="review-card">
+        <div class="review-header">
+          <span class="review-name">Id Comentario: {{ review.idMovie }} {{review.id}}</span>
+          <span  ></span>
+          <span class="review-score">Calificación: {{ review.score }} / 10</span>
+          <button class="delete-btn" (click)="deleteReview(review.id)">Eliminar</button>
+        </div>
+        <p>{{ review.description }}</p>
+      </div>
+    </div>
+
+
+
+}@else {
+  
+   <p>Por favor, inicie sesión para ver los detalles de su perfil.</p>
+
+}
+
+<app-footer></app-footer>
+
