--- a/Tp-Final-labo4/src/app/Components/movie-search/movie-search.html
+++ b/Tp-Final-labo4/src/app/Components/movie-search/movie-search.html
@@ -10,15 +10,16 @@
 
     <div>
       <input [formControl]="busqueda" type="text" class="form-control" id="search" placeholder="Buscar pelicula">
-      <button class="btn btn-primary" (click)="buscar()" [disabled]="busqueda.invalid" >Buscar </button>
+      <button class="btn btn-primary" (click)="buscar()" [disabled]="busqueda.invalid">Buscar </button>
+      <br>
       @if (busqueda.hasError("required") && busqueda.touched) {
       <span>No se ingreso dato de la pelicula</span>
-    }
+      }
     </div>
 
 
     <div>
-      <a [routerLink]="['/profile-detail']" class="perfil-class" >
+      <a [routerLink]="['/profile-detail']" class="perfil-class">
         <h2>Perfil</h2>
         <img src="assets/perfil.png" alt="Perfil del usuario" class="logo perfil">
       </a>
@@ -29,8 +30,9 @@
   <div class="row mt-3">
 
 
-    @for (item of resultados; track item.id) {
-    <div class="col-2">
+    <div class="col">
+
+      @for (item of resultados; track item.id) {
 
       <div class="card">
         <a [routerLink]="['/movie-review', item.id]">
@@ -38,15 +40,13 @@
             class="img-fluid rounded">
         </a>
         <a [routerLink]="['/movie-review', item.id]" class="movie-title-link">
-          <p class="mt-2 text-center">{{ item.title }}</p>
+          {{ item.title }}
         </a>
-        <p class="text-muted text-center">Puntuación: {{ item.vote_average }}</p>
+        <p>Puntuación: {{ item.vote_average }}</p>
       </div>
 
-
+      }
     </div>
-    }
-
 
   </div>
 </div>
