--- a/Tp-Final-labo4/src/app/Components/review-list/review-list.html
+++ b/Tp-Final-labo4/src/app/Components/review-list/review-list.html
@@ -1,8 +1,9 @@
 <div class="review-list container mt-4">
 
-  <h3 >Agrega tu reseña</h3>
+  <h3>Agrega tu reseña</h3>
 
   <form [formGroup]="reviewForm" (ngSubmit)="addReview()">
+
     <div class="star-rating mb-3">
 
       @for (star of [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]; track $index) {
@@ -11,63 +12,66 @@
       </span>
       }
 
-      <span >Calificación: {{ reviewForm.get('score')?.value || 0 }} / 10</span>
+      <span>Calificación: {{ reviewForm.get('score')?.value || 0 }} / 10</span>
 
       @if (reviewForm.get('score')?.invalid && reviewForm.get('score')?.touched) {
-        <div class="text-danger">
-         * La calificación es obligatoria y debe estar entre 1 y 10.
-         </div>
-       }
+      <div class="text-danger">
+        * La calificación es obligatoria y debe estar entre 1 y 10.
+      </div>
+      }
 
-      
+
     </div>
 
-    <textarea formControlName="description"  placeholder="Escribe tu reseña aquí...">
+    <textarea formControlName="description" placeholder="Escribe tu reseña aquí...">
     </textarea>
 
-      @if (reviewForm.get('description')?.invalid && reviewForm.get('description')?.touched) {
-        <div class="text-danger">
-        * La descripción es obligatoria y debe tener al menos 5 caracteres.
-      </div>
-       }
-
-    
+    @if (reviewForm.get('description')?.invalid && reviewForm.get('description')?.touched) {
+    <div class="text-danger">
+      * La descripción es obligatoria y debe tener al menos 5 caracteres.
+    </div>
+    }
 
     <button type="submit" class="btn btn-success" [disabled]="reviewForm.invalid">Agregar reseña</button>
+
   </form>
 
   <div class="review-list container mt-4">
     <h3>Reseñas</h3>
 
     @if (reviews.length === 0) {
-     <span>
-       No hay reseñas disponibles para esta película.
-     </span>
-     }
+    <span>
+      No hay reseñas disponibles para esta película.
+    </span>
+    }
 
-     @for (review of reviews; track review.id) {
-       <div >
-       <div >
+    @for (review of reviews; track review.id) {
 
-         <span class="user-id badge bg-primary me-2">
-           Usuario ID: {{ review.idProfile }}
-          </span>
+    <div class="card-reseñas">
 
-         <span class="review-score">
+        <div class="review-info" > 
+          <strong>
+             Usuario: {{ review.userName || review.idProfile }}
+          </strong>
+
+        <span class="review-score">
           <strong>Calificación:</strong> {{ review.score }} / 10
-         </span>
+        </span>
 
-         @if (review.idProfile === userId) {
-          <button class="btn"
-                (click)="deleteReview(review.id)">
-            X
-           </button>
-           }
+
         </div>
 
-           <p class="review-description">{{ review.description }}</p>
-        </div>
-   }
+        @if (review.idProfile === userId) {
+        <button class="btn" (click)="deleteReview(review.id)">
+          Eliminar
+        </button>
+        }
+
+    </div>
+
+     <p class="review-description">{{ review.description }}</p>
+
+    }
 
 
   </div>
