--- a/Tp-Final-labo4/src/app/Components/movie-search/movie-search.css
+++ b/Tp-Final-labo4/src/app/Components/movie-search/movie-search.css
@@ -30,7 +30,6 @@
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
-
   }
 
 
@@ -40,6 +39,7 @@
 
    display: flex;
    flex-direction: column;
+   border-radius: 5px;
    align-items: center;
 
    border: 1px solid rgb(69, 82, 79);
